<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.CharacterDetailsFragment">


    <ImageView
        android:id="@+id/iv_details_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_details_photo"
        app:layout_constraintStart_toStartOf="@+id/iv_details_photo"
        app:layout_constraintTop_toBottomOf="@+id/iv_details_photo" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_name"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_details_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/species"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_details_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_details_species"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_species" />

            <TextView
                android:id="@+id/tv_details_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/house"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_details_gender"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_gender" />

            <TextView
                android:id="@+id/tv_details_ancestry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ancestry"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_details_house"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_house" />

            <TextView
                android:id="@+id/tv_details_eye_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/eye_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_details_ancestry"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_ancestry" />

            <TextView
                android:id="@+id/tv_details_hair_colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hair_colour"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_details_eye_colour"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_eye_colour" />

            <TextView
                android:id="@+id/tv_details_patronus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/patronus"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_details_hair_colour"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_hair_colour" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_character_details_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_not_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_details_photo" />
</androidx.constraintlayout.widget.ConstraintLayout>